# yolov8-aerial-detection

./: .gitignore  README.md  REPORT.MD  app.py  config.yaml  pyproject.toml  requirements.txt
data/: data.yaml
data/labels/test/: MunichStreet02-MOS76.txt
data/labels/train/: MunichStreet02-MOS74.txt  MunichStreet02-MOS77.txt  MunichStreet02-MOS78.txt  MunichStreet02-MOS81.txt  MunichStreet02-MOS82.txt  MunichStreet02-MOS92.txt  MunichStreet02-MOS93.txt
data/labels/val/: MunichStreet02-MOS79.txt  MunichStreet02-MOS80.txt
pipeline/: 1-preprocess.py  2-train.py  3-validate.py
runs/detect/experiment_20260415_114501/: args.yaml  results.csv
