[project]
name = "object-detection-project"
version = "0.1.0"
description = "Modular Object detection project using YOLO trained on an ariel images dataset."
requires-python = ">=3.11"
dependencies = [
    "ultralytics>=8.2.0",
    "opencv-python>=4.9.0",
    "streamlit>=1.28.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 150
target-version = "py311"
lint.select = ["E", "F", "I", "B"]